skip to main link contrast issues

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     position: absolute;
     z-index: 99;
     background-color: #F3976C;
-    color: #212121;
+    color: #212121 !important;
     padding: .5em 1em;
     border-bottom-right-radius: 16px;
     box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.5);
